--- a/aur-repo/115-browser-bin/lilac.yaml
+++ b/aur-repo/115-browser-bin/lilac.yaml
@@ -6,9 +6,9 @@ post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
 update_on:
-  - source: htmlparser
+  - source: css
     url: "https://115.com/product_browser"
     rule:
-      xpath: "//a[contains(@href, '115br_v') and substring(@href, string-length(@href) - 3) = '.deb']"
+      selector: "a[href*='115br_v'][href$='.deb']"
       attr: href
       regex: '115br_v[\d.\d.\d.\d).deb'
