kicad-hq: auto updated to 20241008-1

--- a/aur-repo/kicad-hq/PKGBUILD
+++ b/aur-repo/kicad-hq/PKGBUILD
@@ -5,8 +5,8 @@ _name=${pkgname%-hq}
 # pkgver=8.0.6
 # _pkgver=${pkgver}-hq
 _tagname='8.0.6-hq'
-pkgver="${_tagname//-/}"
-pkgrel=3
+pkgver=20241008
+pkgrel=1
 pkgdesc="Electronic schematic and printed circuit board (PCB) design tools"
 arch=($CARCH)
 url="https://gitlab.com/kicad-hq/kicad"
