--- a/aur-repo/wchisp-git/PKGBUILD
+++ b/aur-repo/wchisp-git/PKGBUILD
@@ -29,11 +29,13 @@ sha256sums=('SKIP')
 
 prepare() {
     git -C "${srcdir}/${pkgname}" clean -dfx
+    cd "${srcdir}/${pkgname}/"
+    git tag --delete nightly
 }
 
 pkgver() {
     cd "${srcdir}/${pkgname}/"
-    git tag --delete nightly && git describe --long --tags | sed 's/v//g;s/\([^-]*-g\)/r\1/;s/-/./g'
+    git describe --long --tags | sed 's/^[vV]//g;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 build() {
