--- a/aur-repo/wchisp-git/PKGBUILD
+++ b/aur-repo/wchisp-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=wchisp-git
-pkgver=0.2.2.r27.g87ebd0b
+pkgver=0.3.0.r11.gc47962d
 pkgrel=1
 pkgdesc="WCH ISP Tool in Rust"
 arch=(x86_64
