--- a/aur-repo/zyplayer-appimage/PKGBUILD
+++ b/aur-repo/zyplayer-appimage/PKGBUILD
@@ -20,14 +20,15 @@ source_aarch64=("${pkgname%-appimage}-${pkgver}-aarch64.AppImage::${url}/release
 source_x86_64=("${pkgname%-appimage}-${pkgver}-x86_64.AppImage::${url}/releases/download/v${pkgver}/${pkgname%-appimage}-linux-${pkgver}-x86_64.AppImage")
 sha256sums_aarch64=('1c946a05ded1d143476dae6656cd1d5656ed7b3cb92197e291d2cc631a891430')
 sha256sums_x86_64=('83286a18383b917d32605818d1c6dca96c312fd2c64a741f156130f1d64ae680')
+_appimage="${pkgname%-appimage}-${pkgver}-${CARCH}.AppImage"
 
 prepare() {
-    chmod a+x "${pkgname%-appimage}-${pkgver}-${CARCH}.AppImage"
-    "./${pkgname%-appimage}-${pkgver}.AppImage" --appimage-extract >/dev/null
+    chmod a+x "${__appimage}"
+    "./${__appimage}" --appimage-extract >/dev/null
     sed 's|AppRun|/opt/appimages/zyfun.AppImage|g;s|Utility|AudioVideo;Utility|g' -i "${srcdir}/squashfs-root/${pkgname%-appimage}.desktop"
 }
 package() {
-    install -Dm755 "${srcdir}/${pkgname%-appimage}-${pkgver}-${CARCH}.AppImage" "${pkgdir}/${_install_path}/${pkgname%-appimage}.AppImage"
+    install -Dm755 "${srcdir}/${__appimage}" "${pkgdir}/${_install_path}/${pkgname%-appimage}.AppImage"
     install -Dm644 "${srcdir}/squashfs-root/${pkgname%-appimage}.desktop" "${pkgdir}/usr/share/applications/${pkgname%-appimage}.desktop"
     for _icons in 16x16 32x32 48x48 64x64 128x128 256x256 512x512; do
         install -Dm644 "${srcdir}/squashfs-root/usr/share/icons/hicolor/${_icons}/apps/${pkgname%-appimage}.png" \
