python-stua: auto updated to 0.3.0-5

--- a/aur-repo/python-stua/PKGBUILD
+++ b/aur-repo/python-stua/PKGBUILD
@@ -3,8 +3,8 @@
 _pkgname=stua
 pkgname=python-stua
 pkgver=0.3.0
-pkgrel=4
-pkgdesc="A collection of various shell scripts"
+pkgrel=5
+pkgdesc="A collection of generic python functions and classes, with no specific focus."
 arch=('any')
 url='https://github.com/rsalmaso/python-stua'
 license=('MIT')
@@ -17,11 +17,6 @@ sha256sums=('4f833a1947447d0abf709607fb2b9a86b272d390202c6dfbbde1a08bd7ad8165')
 build() {
   cd "$pkgname-$pkgver"
   python setup.py build
-}
-
-check() {
-  cd "$pkgname-$pkgver"
-  python setup.py test
 }
 
 package() {
