--- a/aur-repo/opengnb-git/PKGBUILD
+++ b/aur-repo/opengnb-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=opengnb-git
-pkgver=1.4.5.b.4.g362c481
+pkgver=1.4.5.b.14.g17c2ab4
 pkgrel=1
 pkgdesc="GNB is open source de-centralized VPN to achieve layer3 network via p2p with the ultimate capability of NAT Traversal."
 arch=($CARCH)
@@ -13,12 +13,12 @@ replaces=()
 depends=(
     bash
     glibc)
-optdepends=()
 makedepends=(git
     sed
     libnatpmp
     miniupnpc
     zlib)
+optdepends=()
 backup=()
 options=('!makeflags')
 install=
@@ -34,12 +34,12 @@ prepare() {
     git -C "${srcdir}/${pkgname}" clean -dfx
 
     cd "${srcdir}/${pkgname}"
-    sed -i -e 's|-I./libs|-I./libs -I/usr/include|g' \
-        -e 's|-I./libs/miniupnpc/|-I/usr/include/miniupnpc|g' \
-        -e 's|-I./libs/libnatpmp | |g' \
-        -e 's|-I./libs/zlib | |g' \
-        -e 's| -pthread| -pthread -z relro -z now -z shstk|g' Makefile.linux
-
+    #     sed -i -e 's|-I./libs|-I./libs -I/usr/include|g' \
+    #         -e 's|-I./libs/miniupnpc/|-I/usr/include/miniupnpc|g' \
+    #         -e 's|-I./libs/libnatpmp | |g' \
+    #         -e 's|-I./libs/zlib | |g' \
+    #         -e 's| -pthread| -pthread -z relro -z now -z shstk|g' Makefile.linux
+    sed -i -e 's| -pthread| -pthread -z relro -z now -z shstk|g' Makefile.linux
     sed -i -e 's|sbin|bin|g' scripts/opengnb\@.service
 }
 
