--- a/aur-repo/ch343ser-git/lilac.yaml
+++ b/aur-repo/ch343ser-git/lilac.yaml
@@ -1,8 +1,7 @@
 maintainers:
   - github: taotieren
 pre_build_script: aur_pre_build(maintainers=['taotieren', 'gynamics'])
-pre_build_script: |
-  update_pkgver_and_pkgrel(_G.newver)
+pre_build: vcs_update
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
