--- a/aur-repo/python-cmsis-pack-manager/lilac.yaml
+++ b/aur-repo/python-cmsis-pack-manager/lilac.yaml
@@ -1,11 +1,12 @@
 maintainers:
   - github: taotieren
-pre_build_script: |
-  update_pkgver_and_pkgrel(_G.newver)
+pre_build: vcs_update
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
 update_on:
   - source: github
     github: pyocd/cmsis-pack-manager
+  # - source: pypi
+  #   pypi: cmsis_pack_manager
   - alias: python
