--- a/aur-repo/openocdcfg-generator/lilac.yaml
+++ b/aur-repo/openocdcfg-generator/lilac.yaml
@@ -1,5 +1,5 @@
 maintainers:
-  - github: taotieren]
+  - github: taotieren
 pre_build_script: update_pkgver_and_pkgrel(_G.newver.lstrip('v'))
 post_build_script: |
   git_pkgbuild_commit()
