--- a/aur-repo/115-browser-bin/lilac.yaml
+++ b/aur-repo/115-browser-bin/lilac.yaml
@@ -6,12 +6,9 @@
 #   git_pkgbuild_commit()
 #   update_aur_repo()
 # update_on:
-#   - source: css
+#   - source: "htmlparser"
 #     url: "https://115.com/product_browser"
-#     rule:
-#       selector: "a[href*='115br_v'][href$='.deb']"
-#       attr: href
-#       regex: '115br_v[\d.\d.\d.\d).deb'
+#     regex: '115br_v([\d.]+).deb'
 
 maintainers:
   - github: taotieren
@@ -20,3 +17,12 @@ post_build: aur_post_build
 update_on:
   - source: aur
     aur: 115-browser-bin
+
+# maintainers:
+#   - github: taotieren
+# update_on:
+#   - source: htmlparser
+#     url: "https://115.com/product_browser"
+#     regex: '115br_v([\d.]+).deb'
+# - source: manual
+#   manual: 1
