--- a/aur-repo/mecab-ipadic/lilac.yaml
+++ b/aur-repo/mecab-ipadic/lilac.yaml
@@ -2,6 +2,8 @@ maintainers:
   - github: taotieren
 pre_build_script: aur_pre_build(maintainers=['FSMaxB'])
 post_build: aur_post_build
+repo_depends:
+  - mecab-git
 update_on:
   - source: aur
     github: mecab-ipadic
