un-lock-git: auto updated to 1.5.8.r0.ga83b431-1

--- a/aur-repo/un-lock-git/PKGBUILD
+++ b/aur-repo/un-lock-git/PKGBUILD
@@ -3,7 +3,7 @@
 pkgbase=un-lock-git
 pkgname=miunlocktool-git
 _name=MiUnlockTool
-pkgver=1.5.7.r18.g4be8e0b
+pkgver=1.5.8.r0.ga83b431
 pkgrel=1
 pkgdesc="MiUnlockTool developed to retrieve encryptData(token) for Xiaomi devices for unlocking bootloader, It is compatible with all platforms."
 arch=(any)
