--- a/aur-repo/canboat/PKGBUILD
+++ b/aur-repo/canboat/PKGBUILD
@@ -39,8 +39,8 @@ sha256sums=('b095726ec4d7225ff10d13bbf2c9df68b6f82067128892f50a9ca845a55882b2')
 build() {
     #     export LDFLAGS="-z relro -z now -z shstk"
     cd "${srcdir}/${pkgname}-${pkgver}"
-    make generated
-    #     make
+    #     make generated
+    make
 }
 
 check() {
