--- a/aur-repo/deeplx-git/PKGBUILD
+++ b/aur-repo/deeplx-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=deeplx-git
-pkgver=1.0.1.r0.gb04139e
+pkgver=1.0.1.r1.gf2fa902
 pkgrel=1
 pkgdesc="DeepL Free API (No TOKEN required)"
 arch=($CARCH)
@@ -19,7 +19,7 @@ install=${pkgname}.install
 source=("${pkgname}::git+${url}.git"
     ${pkgname}.install)
 sha256sums=('SKIP'
-    '3962c9e75073e0dac0088a55d3574cc8cb104031837876422281081a32d332d3')
+            '3962c9e75073e0dac0088a55d3574cc8cb104031837876422281081a32d332d3')
 
 export CGO_CPPFLAGS="${CPPFLAGS}"
 export CGO_CFLAGS="${CFLAGS}"
