--- a/aur-repo/kpatch-git/PKGBUILD
+++ b/aur-repo/kpatch-git/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Quey-Liang Kao <s101062801@m101.nthu.edu.tw>
 
 pkgname=kpatch-git
-pkgver=0.9.9.r62.g8cb8420
-pkgrel=2
+pkgver=0.9.9.r64.gcbf2bc9
+pkgrel=1
 pkgdesc='Live kernel patching (git)'
 arch=($CARCH)
 url=https://github.com/dynup/kpatch
