--- a/aur-repo/hbdinetd-git/lilac.yaml
+++ b/aur-repo/hbdinetd-git/lilac.yaml
@@ -7,6 +7,7 @@ post_build_script: |
 repo_depends:
   - hbdbus-git
   - purc-git
+  - xguipro-git
 update_on:
   - source: github
     github: HybridOS2/HBDInetd
