--- a/aur-repo/python-cmsis-pack-manager/PKGBUILD
+++ b/aur-repo/python-cmsis-pack-manager/PKGBUILD
@@ -52,7 +52,7 @@ pkgver() {
   cd "${srcdir}/${_name}"
   (
     set -o pipefail
-    git tag -l 'rust*' | xargs git tag -d && git describe --long --tag --abbrev=7 2>/dev/null | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g' ||
+    git describe --long --tag --abbrev=7 2>/dev/null | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g' ||
       printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
   )
 }
