--- a/aur-repo/python-pypemicro/lilac.yaml
+++ b/aur-repo/python-pypemicro/lilac.yaml
@@ -2,10 +2,9 @@ maintainers:
   - github: taotieren
 pre_build_script: aur_pre_build(maintainers=['2bluesc'])
 post_build: aur_post_build
-repo_depends:
-  - python-pyocd
-  - python-pypemicro
+# repo_depends:
+# -
 update_on:
   - source: aur
-    aur: python-pyocd-pemicro
+    aur: python-pypemicro
   - alias: python
