--- a/aur-repo/python-pyocd-pemicro/lilac.yaml
+++ b/aur-repo/python-pyocd-pemicro/lilac.yaml
@@ -9,3 +9,6 @@ update_on:
   - source: aur
     aur: python-pyocd-pemicro
   - alias: python
+  - source: alpm
+    alpm: python-setuptools-scm
+    repo: extra
