--- a/aur-repo/python-pyocd-pemicro/lilac.yaml
+++ b/aur-repo/python-pyocd-pemicro/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['2bluesc'])
+pre_build_script: |
+  aur_pre_build(maintainers=['2bluesc'])
+  add_makedepends(['python-setuptools-scm'])
 post_build: aur_post_build
 repo_depends:
   - python-pyocd
@@ -9,6 +11,3 @@ update_on:
   - source: aur
     aur: python-pyocd-pemicro
   - alias: python
-  - source: alpm
-    alpm: python-setuptools-scm
-    repo: extra
