python-pyocd-pemicro: auto updated to 1.1.5-2

--- a/aur-repo/python-pyocd-pemicro/PKGBUILD
+++ b/aur-repo/python-pyocd-pemicro/PKGBUILD
@@ -2,7 +2,7 @@
 _pkgname=pyocd-pemicro
 pkgname=python-$_pkgname
 pkgver=1.1.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Python On Chip Debugger and programmer for ARM Cortex-M microcontrollers using CMSIS-DAP"
 url="https://github.com/pyocd/pyocd-pemicro"
 depends=('python'
@@ -10,7 +10,7 @@ depends=('python'
          'python-pyocd'
          )
 license=('BSD-3-Clause')
-makedepends=('python-build'
+makedepends=("python-build" "python-setuptools-scm"
              'python-installer'
              'python-setuptools'
              'python-wheel'
