--- a/aur-repo/python-espeak/lilac.yaml
+++ b/aur-repo/python-espeak/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['vinipsmaker'])
+pre_build_script: |
+  aur_pre_build(maintainers=['vinipsmaker'])
+  add_makedepends(['python-setuptools', 'python-installer', 'python-wheel'])
 post_build: aur_post_build
 repo_depends:
   - espeak
