--- a/aur-repo/can-utils-git/PKGBUILD
+++ b/aur-repo/can-utils-git/PKGBUILD
@@ -3,8 +3,8 @@
 
 pkgbase=can-utils-git
 pkgname=can-utils-git
-pkgver=2023.03.r233.g6526683
-pkgrel=5
+pkgver=2023.03.r235.g72f236e
+pkgrel=1
 groups=()
 pkgdesc="Linux-CAN / SocketCAN user space applications"
 arch=($CARCH)
