--- a/aur-repo/python-libclang/PKGBUILD
+++ b/aur-repo/python-libclang/PKGBUILD
@@ -8,7 +8,11 @@ pkgdesc="Clang Python Bindings"
 arch=($CARCH)
 url="https://pypi.org/project/${_pkgname}"
 license=('Apache-2.0')
-makedepends=(python-build python-installer python-wheel)
+makedepends=(
+    python-build
+    python-installer
+    python-setuptools
+    python-wheel)
 depends=(python)
 source=(https://files.pythonhosted.org/packages/source/l/$_pkgname/$_pkgname-$pkgver.tar.gz)
 sha256sums=(a1214966d08d73d971287fc3ead8dfaf82eb07fb197680d8b3859dbbbbf78250)
