--- a/aur-repo/dsview-git/lilac.yaml
+++ b/aur-repo/dsview-git/lilac.yaml
@@ -1,17 +1,14 @@
 maintainers:
   - github: taotieren
-
-# pre_build_script: aur_pre_build(maintainers=['anatolik', 'abougouffa'])
-
-# post_build_script: aur_post_build
-
-pre_build: vcs_update
-
-post_build_script: |
-  git_pkgbuild_commit()
-
+pre_build_script: |
+  aur_pre_build(maintainers=['anatolik', 'abougouffa'])
+  add_makedepends(['git'])
+post_build_script: aur_post_build
+# pre_build: vcs_update
+# post_build_script: |
+#   git_pkgbuild_commit()
 update_on:
-  - source: github
-    github: DreamSourceLab/DSView
-  # - source: aur
-  #   aur: dsview-git
+  # - source: github
+  #   github: DreamSourceLab/DSView
+  - source: aur
+    aur: dsview-git
