python-libclang: auto updated to 18.1.1-2

--- a/aur-repo/python-libclang/PKGBUILD
+++ b/aur-repo/python-libclang/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=python-libclang
 _pkgname=${pkgname:7}
 pkgver=18.1.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Clang Python Bindings"
 arch=($CARCH)
 url="https://pypi.org/project/${_pkgname}"
@@ -15,7 +15,7 @@ makedepends=(
     python-wheel)
 depends=(python)
 source=(https://files.pythonhosted.org/packages/source/l/$_pkgname/$_pkgname-$pkgver.tar.gz)
-sha256sums=(a1214966d08d73d971287fc3ead8dfaf82eb07fb197680d8b3859dbbbbf78250)
+sha256sums=('a1214966d08d73d971287fc3ead8dfaf82eb07fb197680d8b3859dbbbbf78250')
 build() {
     cd $_pkgname-$pkgver
     python -m build --wheel --no-isolation
