--- a/aur-repo/python-jinja-time/lilac.yaml
+++ b/aur-repo/python-jinja-time/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers='[gromit'])
+pre_build_script: aur_pre_build(maintainers=['gromit'])
 post_build: aur_post_build
 # repo_depends:
 #   -
