--- a/aur-repo/qucs-s-git/PKGBUILD
+++ b/aur-repo/qucs-s-git/PKGBUILD
@@ -10,7 +10,7 @@ url="https://github.com/ra3xdh/qucs_s"
 license=('GPL-2.0-only')
 _qt=qt6
 groups=()
-depends=($_qt-tools)
+depends=($_qt-base)
 makedepends=(cmake
     ninja
     git
@@ -22,6 +22,7 @@ makedepends=(cmake
     libtool
     flex
     bison
+    $_qt-tools
     $_qt-svg)
 optdepends=('ngspice: recommended simulation backend'
     'qucs: for Qucsator simulation backend'
