--- a/aur-repo/qucs-s-git/PKGBUILD
+++ b/aur-repo/qucs-s-git/PKGBUILD
@@ -1,14 +1,14 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=qucs-s-git
-pkgver=2.1.0.r265.gbdc143e1
+pkgver=r0.g1a3ce179
 pkgrel=1
 epoch=
 pkgdesc="Qucs-S provides GUI for different circuit simulation kernels. "
 arch=($CARCH)
 url="https://github.com/ra3xdh/qucs_s"
 license=('GPL-2.0-only')
-_qt=qt6
+_qt=qt5
 groups=()
 depends=($_qt-base)
 makedepends=(cmake
