--- a/aur-repo/qucs-s-git/PKGBUILD
+++ b/aur-repo/qucs-s-git/PKGBUILD
@@ -47,7 +47,7 @@ backup=()
 options=('!makeflags')
 install=
 changelog=
-source=("${pkgname%-git}::git+${url}.git")
+source=("${pkgname}::git+${url}.git")
 noextract=()
 sha256sums=('SKIP')
 validpgpkeys=()
