--- a/aur-repo/qucs-s-git/PKGBUILD
+++ b/aur-repo/qucs-s-git/PKGBUILD
@@ -18,7 +18,7 @@ depends=(
     python
     python-numpy
     python-matplotlib
-    python-parse
+    #     python-parse
     $_qt-base
     $_qt-charts
     $_qt-svg)
@@ -32,7 +32,9 @@ makedepends=(
     perl-gd
     perl-xml-libxml
     gperf
+    libcups
     libtool
+    mesa
     flex
     bison
     $_qt-tools
