--- a/aur-repo/qucs-s-git/PKGBUILD
+++ b/aur-repo/qucs-s-git/PKGBUILD
@@ -17,6 +17,7 @@ depends=(
     graphicsmagick
     hicolor-icon-theme
     imagemagick
+    ngspice
     python
     python-numpy
     python-matplotlib
