--- a/aur-repo/qucs-s-git/PKGBUILD
+++ b/aur-repo/qucs-s-git/PKGBUILD
@@ -48,7 +48,8 @@ optdepends=(
     'qucsator: An integrated circuit simulator'
     'qucs: for Qucsator simulation backend'
     'freehdl: to permit digital circuit simulation'
-    'asco: to enable circuit optimization')
+    'asco: to enable circuit optimization'
+    'openvaf: A Next-Generation Verilog-A compiler https://openvaf.semimod.de/')
 checkdepends=()
 optdepends=()
 provides=(${pkgname%-git})
