--- a/aur-repo/qucs-s-git/PKGBUILD
+++ b/aur-repo/qucs-s-git/PKGBUILD
@@ -50,7 +50,8 @@ optdepends=(
     'qucs: for Qucsator simulation backend'
     'freehdl: to permit digital circuit simulation'
     'asco: to enable circuit optimization'
-    'openvaf: A Next-Generation Verilog-A compiler https://openvaf.semimod.de/')
+    'openvaf: A Next-Generation Verilog-A compiler https://openvaf.semimod.de/'
+    'qucs-rflayout: Export Qucs RF schematics to KiCad layouts & OpenEMS scripts')
 checkdepends=()
 optdepends=()
 provides=(${pkgname%-git})
