--- a/aur-repo/qucs-rflayout/PKGBUILD
+++ b/aur-repo/qucs-rflayout/PKGBUILD
@@ -32,6 +32,7 @@ checkdepends=(
 optdepends=(
     'kicad: Electronic schematic and printed circuit board (PCB) design tools'
     'qucs-s: Qucs-S provides GUI for different circuit simulation kernels.'
+    'openems: free and open electromagnetic field solver using the FDTD method'
 )
 provides=(${pkgname})
 conflicts=(${pkgname})
