--- a/aur-repo/fungw/lilac.yaml
+++ b/aur-repo/fungw/lilac.yaml
@@ -4,6 +4,7 @@ pre_build_script: aur_pre_build(maintainers=[ 'cuvoodoo'])
 post_build: aur_post_build
 repo_depends:
   - genht
+  - libmawk
 update_on:
   - source: aur
     aur: fungw
