--- a/aur-repo/qucs-rflayout/PKGBUILD
+++ b/aur-repo/qucs-rflayout/PKGBUILD
@@ -34,6 +34,7 @@ optdepends=(
     'qucs-s: Qucs-S provides GUI for different circuit simulation kernels.'
     'openems: free and open electromagnetic field solver using the FDTD method'
     'pcb-rnd: free/open source, flexible, modular Printed Circuit Board editor'
+    'inkscape: Professional vector graphics editor'
 )
 provides=(${pkgname})
 conflicts=(${pkgname})
