--- a/aur-repo/qucs-rflayout/PKGBUILD
+++ b/aur-repo/qucs-rflayout/PKGBUILD
@@ -31,6 +31,7 @@ checkdepends=(
 )
 optdepends=(
     'kicad: Electronic schematic and printed circuit board (PCB) design tools'
+    'qucs: An integrated circuit simulator with a graphicaluser interface'
     'qucs-s: Qucs-S provides GUI for different circuit simulation kernels.'
     'openems: free and open electromagnetic field solver using the FDTD method'
     'pcb-rnd: free/open source, flexible, modular Printed Circuit Board editor'
