--- a/aur-repo/qucs-rflayout/lilac.yaml
+++ b/aur-repo/qucs-rflayout/lilac.yaml
@@ -8,5 +8,6 @@ post_build_script: |
 update_on:
   - source: github
     github: thomaslepoix/Qucs-RFlayout
-    use_max_tag: true
+    use_latest_release: true
+    # use_max_tag: true
     # prefix: v
