--- a/aur-repo/qucs-rflayout/lilac.yaml
+++ b/aur-repo/qucs-rflayout/lilac.yaml
@@ -8,7 +8,10 @@ post_build_script: |
 update_on:
   - source: github
     github: thomaslepoix/Qucs-RFlayout
-    use_latest_tag: true
-    # use_latest_release: true
-    # use_max_tag: true
-    # prefix: v
+    use_max_tag: true
+    # include_regex:
+
+# use_latest_tag: true
+# use_latest_release: true
+# use_max_tag: true
+# prefix: v
