--- a/aur-repo/qucs-rflayout/lilac.yaml
+++ b/aur-repo/qucs-rflayout/lilac.yaml
@@ -9,7 +9,7 @@ update_on:
   - source: github
     github: thomaslepoix/Qucs-RFlayout
     use_max_tag: true
-    # include_regex: '[\d.]+'
+    include_regex: '[\d.]+'
 
 # use_latest_tag: true
 # use_latest_release: true
