--- a/aur-repo/probe-rs-git/PKGBUILD
+++ b/aur-repo/probe-rs-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=probe-rs-git
-pkgver=0.1.0.r279.gf818542
+pkgver=0.1.0.r281.gcbb1e32
 pkgrel=1
 pkgdesc="A debugging toolset and library for debugging embedded ARM and RISC-V targets on a separate host"
 arch=($CARCH)
