--- a/aur-repo/mesaflash-git/PKGBUILD
+++ b/aur-repo/mesaflash-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=mesaflash-git
-pkgver=3.4.9.r21.gefbbe21
-pkgrel=2
+pkgver=3.4.9.r22.g063ac69
+pkgrel=1
 pkgdesc="Configuration and diagnostic tool for Mesa Electronics PCI(E)/ETH/EPP/USB/SPI boards"
 arch=($CARCH)
 url="https://github.com/LinuxCNC/mesaflash"
