--- a/aur-repo/deepin-unioncode-git/PKGBUILD
+++ b/aur-repo/deepin-unioncode-git/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgbase=deepin-unioncode-git
 pkgname=deepin-unioncode-git
-pkgver=1.3.17.r20.g7d53433
-pkgrel=2
+pkgver=1.3.17.r21.g9ebd463
+pkgrel=1
 pkgdesc="IDE authored by deepin"
 arch=($CARCH)
 url="https://github.com/linuxdeepin/deepin-unioncode"
