--- a/aur-repo/deepin-unioncode-git/PKGBUILD
+++ b/aur-repo/deepin-unioncode-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=deepin-unioncode-git
 pkgname=deepin-unioncode-git
-pkgver=1.3.17.r21.g9ebd463
+pkgver=1.3.17.r22.g083720a
 pkgrel=1
 pkgdesc="IDE authored by deepin"
 arch=($CARCH)
