--- a/aur-repo/python-fake-useragent/lilac.yaml
+++ b/aur-repo/python-fake-useragent/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['Abzie)
+pre_build_script: aur_pre_build(maintainers=['Abzie'])
 post_build: aur_post_build
 # repo_depends:
 #   -
