--- a/aur-repo/python-digikey-api/lilac.yaml
+++ b/aur-repo/python-digikey-api/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['andrejr'])
+pre_build_script: |
+  aur_pre_build(maintainers=['andrejr'])
+  add_depends(['python38'])
 post_build: aur_post_build
 repo_depends:
   - python-certauth
@@ -10,4 +12,3 @@ update_on:
   - source: aur
     aur: python-digikey-api
   - alias: python
-
