--- a/aur-repo/115-browser-bin/lilac.yaml
+++ b/aur-repo/115-browser-bin/lilac.yaml
@@ -28,6 +28,6 @@ post_build_script: |
 update_on:
   - source: regex
     url: "https://115.com/product_browser"
-    regex: '(\d.\d.\d.\d)'
+    regex: '最新版本：(\d.\d.\d.\d)'
 # - source: manual
 #   manual: 1
