--- a/aur-repo/can-utils-git/PKGBUILD
+++ b/aur-repo/can-utils-git/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgbase=can-utils-git
 pkgname=can-utils-git
-pkgver=2023.03.r235.g72f236e
+pkgver=2023.03.r237.g06561ac
 pkgrel=1
 groups=()
 pkgdesc="Linux-CAN / SocketCAN user space applications"
