--- a/aur-repo/115-browser-bin/lilac.yaml
+++ b/aur-repo/115-browser-bin/lilac.yaml
@@ -1,24 +1,24 @@
-maintainers:
-  - github: taotieren
-pre_build_script: |
-  update_pkgver_and_pkgrel(_G.newver)
-post_build_script: |
-  git_pkgbuild_commit()
-  update_aur_repo()
-update_on:
-  - source: "htmlparser"
-    url: "https://115.com/product_browser"
-    xptah: "/html/body/div[1]/div[3]/div[2]/div[6]/span[1]"
-    include_regex: '最新版本：(\d+.\d+.\d+.\d+)'
-#     regex: '115br_v([\d.]+).deb'
-
 # maintainers:
 #   - github: taotieren
-# pre_build_script: aur_pre_build(maintainers=['taotieren'])
-# post_build: aur_post_build
+# pre_build_script: |
+#   update_pkgver_and_pkgrel(_G.newver)
+# post_build_script: |
+#   git_pkgbuild_commit()
+#   update_aur_repo()
 # update_on:
-#   - source: aur
-#     aur: 115-browser-bin
+#   - source: "htmlparser"
+#     url: "https://115.com/product_browser"
+#     xptah: "/html/body/div[1]/div[3]/div[2]/div[6]/span[1]"
+#     include_regex: '最新版本：(\d+.\d+.\d+.\d+)'
+#     regex: '115br_v([\d.]+).deb'
+
+maintainers:
+  - github: taotieren
+pre_build_script: aur_pre_build(maintainers=['taotieren'])
+post_build: aur_post_build
+update_on:
+  - source: aur
+    aur: 115-browser-bin
 
 # maintainers:
 #   - github: taotieren
