--- a/aur-repo/python-digikey-api/lilac.yaml
+++ b/aur-repo/python-digikey-api/lilac.yaml
@@ -10,4 +10,7 @@ update_on:
   - source: aur
     aur: python-digikey-api
   - source: alpm
+    alpm: python311
+    provided: python
+  - source: alpm
   - alias: python
