--- a/aur-repo/python-digikey-api/lilac.yaml
+++ b/aur-repo/python-digikey-api/lilac.yaml
@@ -12,5 +12,5 @@ update_on:
   - source: alpm
     alpm: python311
     provided: python
-  - source: alpm
+    repo: archlinuxcn
   - alias: python
