fantascene-dynamic-wallpaper-git: auto updated to 1.9.7.r7.gffbe452-1

--- a/aur-repo/fantascene-dynamic-wallpaper-git/PKGBUILD
+++ b/aur-repo/fantascene-dynamic-wallpaper-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=fantascene-dynamic-wallpaper-git
 srcname=fantascene-dynamic-wallpaper-git
-pkgver=1.9.7.r6.g61196e6
+pkgver=1.9.7.r7.gffbe452
 pkgrel=1
 pkgdesc=" dynamic wallpaper. A very nice animated wallpaper on X11 systems.Support Movie and Web animated wallpaper."
 arch=($CARCH)
