--- a/aur-repo/libpldm-git/PKGBUILD
+++ b/aur-repo/libpldm-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=libpldm-git
-pkgver=0.10.0.r23.gd2f8a7e
+pkgver=0.11.0.r0.g0612d98
 pkgrel=1
 epoch=
 pkgdesc="This is a library which deals with the encoding and decoding of PLDM messages."
