--- a/aur-repo/deeplx-git/PKGBUILD
+++ b/aur-repo/deeplx-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=deeplx-git
-pkgver=1.0.1.r1.gf2fa902
+pkgver=1.0.1.r2.g1c8beb8
 pkgrel=1
 pkgdesc="DeepL Free API (No TOKEN required)"
 arch=($CARCH)
