--- a/aur-repo/magiskboot-git/PKGBUILD
+++ b/aur-repo/magiskboot-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=magiskboot-git
 pkgname=magiskboot-git
-pkgver=28001.73.r14.g09a7cd7
+pkgver=28101.77.r0.gb8a6663
 pkgrel=1
 pkgdesc="Magiskboot_ndk"
 arch=($CARCH)
