--- a/aur-repo/fantascene-dynamic-wallpaper-git/PKGBUILD
+++ b/aur-repo/fantascene-dynamic-wallpaper-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=fantascene-dynamic-wallpaper-git
 srcname=fantascene-dynamic-wallpaper-git
-pkgver=1.9.7.r10.g2870b01
+pkgver=1.9.7.r12.g390f56e
 pkgrel=1
 pkgdesc=" dynamic wallpaper. A very nice animated wallpaper on X11 systems.Support Movie and Web animated wallpaper."
 arch=($CARCH)
