--- a/aur-repo/wemeet-bin/lilac.yaml
+++ b/aur-repo/wemeet-bin/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['sukanka', 'AvianaCruz'])
+pre_build_script: aur_pre_build(maintainers=['sukanka', 'AvianaCruz','xuwd1'])
 post_build_script: aur_post_build
 update_on:
   - source: aur
