--- a/aur-repo/kicad-hq/lilac.yaml
+++ b/aur-repo/kicad-hq/lilac.yaml
@@ -18,4 +18,4 @@ update_on:
     # use_max_tag: true
     use_latest_tag: true
     # 8.0.6-hq
-    include_regex: \d+\..*
+    # include_regex: \d+\..*
