--- a/aur-repo/kicad-hq/lilac.yaml
+++ b/aur-repo/kicad-hq/lilac.yaml
@@ -15,7 +15,7 @@ post_build_script: |
 update_on:
   - source: gitlab
     gitlab: kicad-hq/kicad
-    # use_max_tag: true
-    use_latest_tag: true
+    use_max_tag: true
+    # use_latest_tag: true
     # 8.0.6-hq
     # include_regex: \d+\..*
