--- a/aur-repo/kicad-hq/lilac.yaml
+++ b/aur-repo/kicad-hq/lilac.yaml
@@ -16,6 +16,8 @@ update_on:
   - source: gitlab
     gitlab: kicad-hq/kicad
     use_max_tag: true
-    # use_latest_tag: true
-    # 8.0.6-hq
-    # include_regex: \d+\..*
+    # include_regex: '\d+\.\d+\.\d+'
+    exclude_regex: ".*hq.*"
+# use_latest_tag: true
+# 8.0.6-hq
+# include_regex: \d+\..*
