--- a/aur-repo/kicad-hq/lilac.yaml
+++ b/aur-repo/kicad-hq/lilac.yaml
@@ -17,7 +17,7 @@ update_on:
     gitlab: kicad-hq/kicad
     use_max_tag: true
     # include_regex: '\d+\.\d+\.\d+'
-    exclude_regex: ".*hq.*"
+    exclude_regex: ".*rc.*"
 # use_latest_tag: true
 # 8.0.6-hq
 # include_regex: \d+\..*
