--- a/aur-repo/libosal/lilac.yaml
+++ b/aur-repo/libosal/lilac.yaml
@@ -9,5 +9,5 @@ update_on:
   - source: github
     github: robert-burger/libosal
     use_max_tag: true
-    # include_regex: '\d+\.\d+\.\d+'
+    include_regex: '([\d.]+)'
     # prefix: v
