--- a/aur-repo/kicad-hq/lilac.yaml
+++ b/aur-repo/kicad-hq/lilac.yaml
@@ -16,7 +16,7 @@ update_on:
   - source: gitlab
     gitlab: kicad-hq/kicad
     use_max_tag: true
-    # include_regex: '\d+\.\d+\.\d+'
+    include_regex: '([\d.]+)'
     exclude_regex: ".*rc.*"
 # use_latest_tag: true
 # 8.0.6-hq
