--- a/aur-repo/tinybpt-git/PKGBUILD
+++ b/aur-repo/tinybpt-git/PKGBUILD
@@ -1,12 +1,11 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=tinybpt-git
-pkgver=r37.2fd3aac
+pkgver=r28.b490fcc
 pkgrel=1
 epoch=
 pkgdesc="Tinybpt (Tiny Buildroot Packaging Tool) 是一个 buildroot 的包管理工具，主要处理 buildroot 的包依赖关系，提供包的安装、卸载等功能。"
-arch=(
-    $CARCH)
+arch=($CARCH)
 url="https://gitee.com/tinylab/buildroot-toolkit"
 license=(GPL-2.0-or-later)
 groups=()
@@ -18,17 +17,20 @@ depends=(
     glibc
 )
 makedepends=(
-    cpp-httplib
     git
     cmake
+    cpp-httplib
+    openssl
     nlohmann-json
     ninja)
 optdepends=("buildroot-meta: dependency requirements for buildroot")
 checkdepends=()
 options=()
-source=(${pkgname}::git+$url.git)
+source=(${pkgname}::git+$url.git
+    "tinybpt_cacert.pem::https://curl.se/ca/cacert.pem")
 noextract=()
-sha256sums=('SKIP')
+sha256sums=('SKIP'
+    'bb1782d281fe60d4a2dcf41bc229abe3e46c280212597d4abcc25bddf667739b')
 
 pkgver() {
     cd "${srcdir}/${pkgname}"
@@ -44,6 +46,7 @@ prepare() {
 }
 
 build() {
+    cp -rv ${srcdir}/tinybpt_cacert.pem ${srcdir}/${pkgname}
     # see：https://wiki.archlinux.org/title/CMake_package_guidelines
     cmake -S ${pkgname} \
         -DCMAKE_BUILD_TYPE=None \
@@ -56,4 +59,5 @@ build() {
 
 package() {
     DESTDIR="${pkgdir}" ninja -C "${srcdir}"/build install
+    install -dm777 ${pkgdir}/var/cache/tinybpt
 }
