--- a/aur-repo/sdbusplus-git/lilac.yaml
+++ b/aur-repo/sdbusplus-git/lilac.yaml
@@ -1,7 +1,10 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['amateurece'])
+pre_build_script: |
+  aur_pre_build(maintainers=['amateurece'])
+  add_makedepends(['cmake'])
 post_build: aur_post_build
 update_on:
   - source: aur
     aur: sdbusplus-git
+# add_depends([''])
