--- a/aur-repo/sdbusplus-git/lilac.yaml
+++ b/aur-repo/sdbusplus-git/lilac.yaml
@@ -2,7 +2,7 @@ maintainers:
   - github: taotieren
 pre_build_script: |
   aur_pre_build(maintainers=['amateurece'])
-  add_makedepends(['cmake','nlohmann-json'])
+  add_makedepends(['cmake', 'nlohmann-json', 'pkgconf', 'boost-libs'])
 post_build: aur_post_build
 update_on:
   - source: aur
