--- a/aur-repo/liteloader-qqnt-mspring-theme-bin/PKGBUILD
+++ b/aur-repo/liteloader-qqnt-mspring-theme-bin/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Sniventals <Creeperxie@outlook.com>
-# Maintainer: Creeperxie <mingyue@ixcm.onmicrosoft.com>
+# Maintainer: Creeperxie <creeperxie@hotmail.com>
 
 pkgname='liteloader-qqnt-mspring-theme-bin'
 _pkgname='LiteLoaderQQNT-MSpring-Theme'
-pkgver='1.3.3'
+pkgver='1.3.7'
 pkgrel=1
 pkgdesc="LiteLoaderQQNT主题，优雅、粉粉、细致"
 arch=('any')
@@ -14,12 +14,12 @@ provides=("liteloader-qqnt-mspring-theme")
 conflicts=("liteloader-qqnt-mspring-theme")
 
 source=("${pkgname}-${pkgver}.zip::${url}/releases/download/v${pkgver}/${_pkgname}.zip")
-sha256sums=('3852106685184932800433285bb56c66262ccd5d545e70e55addb93b11bad1dc')
-b2sums=('accdbd756aba1ce36d56dc5dc082a230775689f6619b073c1c1aa2a364ffb81d4a5384e25be5dfdd171d5b22a2fce6d3d74ec0f0de5fc11ad8db03765f4f7b94')
+sha256sums=('bcfa2f517b133253c7caafd2de3d4850dba38a68847a5cbd36772341fd0e7419')
+b2sums=('9e78878ff7648d5148220faebc70ca5ff8537788a6ea0230b58ce2f0863a66889c36d35923ab64ee9c0280e147618fe248733d7b5d4c8f7f690f2a2c0bb70529')
 
 package() {
-    mkdir -p "${pkgdir}/opt/LiteLoader/plugins/${_pkgname}"
-    chmod 0777 "${pkgdir}/opt/LiteLoader" "${pkgdir}/opt/LiteLoader/plugins"
-    cp -r "${srcdir}"/* "${pkgdir}/opt/LiteLoader/plugins/${_pkgname}"
+    mkdir -p "${pkgdir}/opt/LiteLoaderQQNT/plugins/${_pkgname}"
+    cp -r "${srcdir}"/* "${pkgdir}/opt/LiteLoaderQQNT/plugins/${_pkgname}"
+    rm "${pkgdir}/opt/LiteLoaderQQNT/plugins/${_pkgname}/${pkgname}-${pkgver}.zip"
     install -Dm644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
