--- a/aur-repo/sdbusplus-git/PKGBUILD
+++ b/aur-repo/sdbusplus-git/PKGBUILD
@@ -1,14 +1,14 @@
 # Maintainer: amateurece <ethan.twardy at gmail dot com>
 
 pkgname=sdbusplus-git
-pkgver=r780.8d40adad
+pkgver=r824.f083bc1a
 pkgrel=1
 pkgdesc="C++ bindings for systemd dbus APIs"
 url="https://github.com/openbmc/sdbusplus"
 arch=('i686' 'x86_64' 'aarch64')
 license=('Apache')
 depends=('systemd-libs' 'python-mako' 'python-inflection' 'python-yaml')
-makedepends=('git' 'meson' 'python-setuptools')
+makedepends=("boost-libs" "cmake" "git" "meson" "nlohmann-json" "pkgconf" "python-setuptools")
 source=("${pkgname}::git+https://github.com/openbmc/sdbusplus.git")
 sha256sums=('SKIP')
 
