liteloader-qqnt-chii-devtools-bin: auto updated to 1.0.0-3

--- a/aur-repo/liteloader-qqnt-chii-devtools-bin/PKGBUILD
+++ b/aur-repo/liteloader-qqnt-chii-devtools-bin/PKGBUILD
@@ -1,10 +1,10 @@
 # Maintainer: Sniventals <Creeperxie@outlook.com>
-# Maintainer: Creeperxie <mingyue@ixcm.onmicrosoft.com>
+# Maintainer: Creeperxie <creeperxie@hotmail.com>
 
 pkgname='liteloader-qqnt-chii-devtools-bin'
 _pkgname='chii-devtools'
 pkgver='1.0.0'
-pkgrel=2
+pkgrel=3
 pkgdesc="LiteLoaderQQNT插件，使用Chii进行远程调试"
 arch=('any')
 url="https://github.com/mo-jinran/${_pkgname}"
@@ -18,7 +18,7 @@ sha256sums=("21482e19dc675a3f7b94274f18ae23b4b942511950d310c5ee81b0a876c08d5d")
 b2sums=("d9ab53b5ecaaa509ebbe2504769b9e9e08d6b9bee77af0673cc75895331f79762e081564ac096ebccd932af29771e858b07fd9884ae47b327c5438075eab599a")
 
 package() {
-    mkdir -p "${pkgdir}/opt/LiteLoader/plugins/${_pkgname}"
-    chmod -R 0777 "${pkgdir}/opt/LiteLoader"
-    cp -rf "${srcdir}"/* "${pkgdir}/opt/LiteLoader/plugins/${_pkgname}"
+    mkdir -p "${pkgdir}/opt/LiteLoaderQQNT/plugins/${_pkgname}"
+    cp -rf "${srcdir}"/* "${pkgdir}/opt/LiteLoaderQQNT/plugins/${_pkgname}"
+    rm -f "${pkgdir}/opt/LiteLoaderQQNT/plugins/${_pkgname}/${pkgname}-${pkgver}.zip"
 }
