--- a/aur-repo/canboat/lilac.yaml
+++ b/aur-repo/canboat/lilac.yaml
@@ -8,6 +8,7 @@ post_build_script: |
 update_on:
   - source: github
     github: canboat/canboat
-    use_max_tag: true
+    use_latest_release: true
     prefix: v
   - alias: python
+    # use_max_tag: true
