--- a/aur-repo/fungw/lilac.yaml
+++ b/aur-repo/fungw/lilac.yaml
@@ -1,6 +1,9 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=[ 'cuvoodoo'])
+pre_build_script: |
+  aur_pre_build(maintainers=[ 'cuvoodoo'])
+  add_depends(['python'])
+  add_makedepends(['prel', 'duktape','mujs', 'lua', 'tcl', 'libmawk'])
 post_build: aur_post_build
 repo_depends:
   - genht-svn
