--- a/aur-repo/pcb-rnd/lilac.yaml
+++ b/aur-repo/pcb-rnd/lilac.yaml
@@ -4,7 +4,7 @@ pre_build_script: aur_pre_build(maintainers=['swiftgeek', 'cuvoodoo'])
 post_build: aur_post_build
 repo_depends:
   - librnd4
-  - fungw
+  - fungw-svn
 update_on:
   - source: aur
     aur: pcb-rnd
