--- a/aur-repo/fantascene-dynamic-wallpaper-git/PKGBUILD
+++ b/aur-repo/fantascene-dynamic-wallpaper-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=fantascene-dynamic-wallpaper-git
 srcname=fantascene-dynamic-wallpaper-git
-pkgver=1.9.7.r13.g294ead8
+pkgver=1.9.9.r3.g1cf9734
 pkgrel=1
 pkgdesc=" dynamic wallpaper. A very nice animated wallpaper on X11 systems.Support Movie and Web animated wallpaper."
 arch=($CARCH)
